--- a/Styles.css
+++ b/Styles.css
@@ -118,3 +118,22 @@ footer a {
   height: 100%;
   width: 100%;
 }
+
+/* lugar y fecha */
+#lugar_fecha {
+  width: 100%;
+  height: 800px;
+  padding: 2%;
+  margin-top: 7%;
+  background-image: url("recursos/ciudad2.png");
+  
+}
+
+
+
+#presentacion{
+  color: #fff;
+    padding: 1%;
+  margin-top:2%;
+}
+
