--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -6,25 +5,25 @@ body {
   overflow-x: hidden;
   /* Establecer el fondo amarillo */
   background-color: rgba(235, 244, 155, 0.693);
-
 }
 
 /* Navbar */
 .navbar-nav {
   display: flex;
   justify-content: right;
-  
 }
+
 .navbar-collapse {
   flex-grow: 0;
 }
+
 .navbar-nav a:last-child {
   color: rgb(231, 247, 89);
 }
+
 .oscurecer {
   filter: brightness(50%);
 }
-
 
 /* Tarjetas de Jugador */
 .card-custom {
@@ -41,17 +40,21 @@ body {
   padding: 4px;
   border-radius: 20%;
 }
+
 .jugador-tag1 {
   background-color: #fffb07;
 }
+
 .jugador-tag2 {
   background-color: #4cb8b4;
   color: #fff;
 }
+
 .jugador-tag3 {
   background-color: #2989e9;
   color: #fff;
 }
+
 .jugador-tag4 {
   background-color: #de3647;
   color: #fff;
@@ -63,9 +66,10 @@ body {
   height: auto;
   object-fit: cover;
 }
+
 @media (max-width: 991px) {
   .img1 {
-      width: 100vw;
+    width: 100vw;
   }
 }
 
@@ -75,14 +79,17 @@ body {
   border-radius: 10px;
   padding: 20px;
 }
+
 .contacto-formulario h5,
 .contacto-formulario h2,
 .contacto-formulario h6 {
   color: #333;
 }
+
 .contacto-formulario label {
   color: #555;
 }
+
 .contacto-formulario input[type="text"],
 .contacto-formulario input[type="email"],
 .contacto-formulario textarea {
@@ -90,10 +97,12 @@ body {
   border-radius: 5px;
   padding: 8px;
 }
+
 .contacto-formulario button[type="submit"] {
   background-color: #28a745;
   border: none;
 }
+
 .contacto-formulario button[type="submit"]:hover {
   background-color: #218838;
 }
@@ -101,12 +110,25 @@ body {
 /* Footer */
 footer a {
   text-decoration: none;
-  color: rgb(239, 205, 33); 
+  color: rgb(239, 205, 33);
 }
 
+/* Custom Banner */
 .custom-banner {
-  height: 500px;
+  position: relative;
   overflow: hidden;
+}
+
+.oscurecer {
+  filter: brightness(50%);
+}
+
+.orador {
+  margin: 5px;
+}
+
+.carousel-caption {
+  bottom: 30%;
 }
 
 .custom-banner .banner-item {
