--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 @import url(/css//footer.css);
 
 /* Pages */
-@import url(/css//Styles.css);
+@import url(/css//styles.css);
 /* @import url(./pages/empresa.css);
  @import url(./pages/clientes.css);
 @import url(./pages/proveedores.css);
