--- a/css/index.css
+++ b/css/index.css
@@ -7,10 +7,7 @@
 @import url(/css/header.css);
 
 /* Footer */
-@import url(/css//footer.css);
+@import url(/css/footer.css);
 
 /* Pages */
-@import url(/css//styles.css);
-/* @import url(./pages/empresa.css);
- @import url(./pages/clientes.css);
-@import url(./pages/proveedores.css);
+@import url(/css/styles.css);
