--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,44 @@
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  /* Establecer el fondo amarillo */
   background-color: rgba(235, 244, 155, 0.693);
+
+}
+/*Banner*/
+.carousel-item img {
+  max-width: 100%; /* Mantener el ancho original */
+  max-height: 650px; /* Establecer una altura máxima */
+  width: auto; /* Permitir que el ancho se ajuste automáticamente */
+  height: auto; /* Permitir que la altura se ajuste automáticamente */
 }
 
-/* Navbar */
-.navbar-nav {
+
+/*Animación */
+.favs {
   display: flex;
-  justify-content: right;
+  max-width: 280px;
+  justify-content: center;
+  align-self: center;
+  background-color: rgba(0, 0, 0, 0.96);
+  animation-name: cambiarColor;
+  animation-duration: 2s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
 }
-
-.navbar-collapse {
-  flex-grow: 0;
+@keyframes cambiarColor {
+  0% {
+      background-color: rgb(233, 249, 218);   /*color1*/
+  }  
+  50% {
+       background-color: #b7c2bb;   /*color2 */
+  }  
+  100% {
+       background-color: rgb(157, 157, 157);   /*color3 */
+  }  
 }
-
-.navbar-nav a:last-child {
-  color: rgb(231, 247, 89);
-}
-
-.oscurecer {
-  filter: brightness(50%);
-}
-
 /* Tarjetas de Jugador */
 .card-custom {
   display: flex;
@@ -40,23 +54,19 @@ body {
   padding: 4px;
   border-radius: 20%;
 }
-
 .jugador-tag1 {
-  background-color: #fffb07;
+  background-color: #fffb079d;
 }
-
 .jugador-tag2 {
-  background-color: #4cb8b4;
+  background-color: #4cb8b57d;
   color: #fff;
 }
-
 .jugador-tag3 {
-  background-color: #2989e9;
+  background-color: #2989e96e;
   color: #fff;
 }
-
 .jugador-tag4 {
-  background-color: #de3647;
+  background-color: #de36475b;
   color: #fff;
 }
 
@@ -66,10 +76,9 @@ body {
   height: auto;
   object-fit: cover;
 }
-
 @media (max-width: 991px) {
   .img1 {
-    width: 100vw;
+      width: 100vw;
   }
 }
 
@@ -79,17 +88,14 @@ body {
   border-radius: 10px;
   padding: 20px;
 }
-
 .contacto-formulario h5,
 .contacto-formulario h2,
 .contacto-formulario h6 {
   color: #333;
 }
-
 .contacto-formulario label {
   color: #555;
 }
-
 .contacto-formulario input[type="text"],
 .contacto-formulario input[type="email"],
 .contacto-formulario textarea {
@@ -97,46 +103,34 @@ body {
   border-radius: 5px;
   padding: 8px;
 }
-
 .contacto-formulario button[type="submit"] {
   background-color: #28a745;
   border: none;
 }
-
 .contacto-formulario button[type="submit"]:hover {
   background-color: #218838;
+}
+
+/* lugar y fecha */
+#lugar_fecha {
+  width: 100%;
+  height: 800px;
+  padding: 2%;
+  margin-top: 0%;
+  background-image: url("../images/ciudad2.png");
+  
+}
+
+
+
+#presentacion{
+  color: #ffffff;
+  padding: 1%;
+  margin-top:2%;
 }
 
 /* Footer */
 footer a {
   text-decoration: none;
-  color: rgb(239, 205, 33);
-}
-
-/* Custom Banner */
-.custom-banner {
-  position: relative;
-  overflow: hidden;
-}
-
-.oscurecer {
-  filter: brightness(50%);
-}
-
-.orador {
-  margin: 5px;
-}
-
-.carousel-caption {
-  bottom: 30%;
-}
-
-.custom-banner .banner-item {
-  height: 100%;
-}
-
-.custom-banner .banner-item img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
+  color: rgb(239, 205, 33); 
 }
